[GTK] Try to fix the build after r191402. https://bugs.webkit.org/show_bug.cgi?id=150435

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-10-22
Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::createPopupMenuProxy):
(WebKit::PageClientImpl::createContextMenuProxy):
(WebKit::PageClientImpl::createColorPicker):
* UIProcess/API/gtk/PageClientImpl.h:
* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::WebContextMenuProxyGtk::populate):
(WebKit::WebContextMenuProxyGtk::show):
(WebKit::WebContextMenuProxyGtk::WebContextMenuProxyGtk):
(WebKit::WebContextMenuProxyGtk::~WebContextMenuProxyGtk):
(WebKit::WebContextMenuProxyGtk::menuPositionFunction):
(WebKit::WebContextMenuProxyGtk::showContextMenu): Deleted.
(WebKit::WebContextMenuProxyGtk::hideContextMenu): Deleted.
(WebKit::WebContextMenuProxyGtk::cancelTracking): Deleted.
* UIProcess/gtk/WebContextMenuProxyGtk.h:
(WebKit::WebContextMenuProxyGtk::gtkMenu):
(WebKit::WebContextMenuProxyGtk::create): Deleted.

Canonical link: https://commits.webkit.org/168610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191447 268f45cc-cd09-0410-ab3c-d52691b4dbfc